# electerm-harmony

./: .gitignore  README.md  README.zh-CN.md  hvigorw  oh-package.json5  package-lock.json  package.json
.github/workflows/: build.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: ARCHITECTURE.md  BUILD.md  ENV_SETUP.md  PORTING_PLAN.md
electerm-web/: .sample.env  package-lock.json  package.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  spawn.cpp
entry/src/main/cpp/types/libspawn/: Index.d.ts  oh-package.json5
hvigor/: hvigor-config.json5
scripts/: build-app.sh  gen-manifest.sh  gen-secrets.sh  prepare-electron-runtime.sh  prepare-node.sh  prepare-web.sh
signing/: .gitkeep
src/app/: app.js  bootstrap.js
src/app/common/: app-props.js  debug-logger.js  default-setting.js  runtime-constants.js
src/app/lib/: create-app.js  create-window.js  db.js  font-list.js  get-config.js  get-port.js  init-server.js  install-src.js  ipc-sync.js  ipc.js  locales.js  on-close.js  serial-port.js  show-item-in-folder.js  single-instance.js  sqlite.js  view.js
src/app/server/: child-process.js  ftp-transfer.js  server.js  session-ftp.js  session-local.js  session-process.js  session-serial.js  session-server.js  session-ssh.js  session.js  ssh-known-hosts.js  transfer.js
src/app/widgets/: widget-local-file-server.js  widget-local-ftp-server.js  widget-mcp-server.js
src/client/file-select-dialog/: file-item.jsx
src/client/web-components/: web-pre.js
(+32 files in other folders)
